--- a/frontend/src/app/gui/toolchest/toolchest.component.html
+++ b/frontend/src/app/gui/toolchest/toolchest.component.html
@@ -1,1 +1,6 @@
-<p>toolchest works!</p>
+<app-window title="Toolchest" top="0" left="0" width="200" [windowControls]="false" [resizable]="false">
+    <ul>
+        <li>Fresh Water Status</li>
+        <li>Waste Water Status</li>
+    </ul>
+</app-window>
