--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,11 +1,13 @@
-
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    background: url(/assets/wallpaper.png) no-repeat center center fixed;
-    background-size: cover;
+    // background: url(/assets/wallpaper.png) no-repeat center center fixed;
+    // background-size: cover;
+    background-color: #4c719e;
     font-family: sans-serif;
 }
 
@@ -19,25 +21,23 @@ div.window-titlebar {
     background-color: #808080;
     border-top: 1px solid #c6c6c6;
     border-left: 1px solid #c6c6c6;
-
     border-bottom: 1px solid #424242;
     border-right: 1px solid #424242;
     background: url(/assets/titlebar-bg.png) repeat-x;
     overflow: hidden;
-
     position: relative;
     top: 0;
     left: 0;
     height: 23px;
     width: 100%;
-
     font-style: italic;
     font-size: 14px;
     line-height: 20px;
-
-    padding-left: 30px;
-
+    padding-left: 5px;
     user-select: none;
+    &.window-withcontrols {
+        padding-left: 30px;
+    }
 }
 
 div.window-border-wrap {
@@ -46,12 +46,11 @@ div.window-border-wrap {
     left: 0;
     width: 100%;
     height: 100%;
-
-    border-width: 6px 6px 6px 6px;
-    border-style: solid;
-
-    border-image: url(/assets/window.png) 6 6 6 6 repeat repeat;
-
+    &.window-resizable {
+        border-width: 6px 6px 6px 6px;
+        border-style: solid;
+        border-image: url(/assets/window.png) 6 6 6 6 repeat repeat;
+    }
 }
 
 div.window-menu-button {
@@ -79,7 +78,6 @@ table {
 table tr td {
     padding: 6px;
     font-size: 12px;
-
     &:first-child {
         width: 150px;
     }
