--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,7 +8,7 @@ body {
     // background: url(/assets/wallpaper.png) no-repeat center center fixed;
     // background-size: cover;
     background-color: #4c719e;
-    font-family: sans-serif;
+    font-family: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 div.window-wrapper {
@@ -73,6 +73,7 @@ div.window-content {
 table {
     width: 100%;
     border-collapse: collapse;
+    font-family: Lato;
 }
 
 table tr td {
@@ -80,6 +81,9 @@ table tr td {
     font-size: 12px;
     &:first-child {
         width: 150px;
+    }
+    &.key {
+        font-weight: 600;
     }
 }
 
